[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dashboard = { path = "../dashboard" } 
sensor_sim = { path = "../sensor_sim" } 

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"